--- a/public/m/home/home.html
+++ b/public/m/home/home.html
@@ -1,3 +1,8 @@
+<div scroll id="header_nav" ng-class="navClass">
+    <div class="notifications"><img src="/public/assets/m/img/ic/ibox-f.png"></div>
+
+</div>
+
 <div id="profile-details">
         <div class="notifications"><img src="/public/assets/m/img/ic/ibox-f.png"></div>
         <div class="profile-pic"><img src="{{user.avatar}}"></div>
