--- a/public/m/home/home.html
+++ b/public/m/home/home.html
@@ -1,9 +1,21 @@
-<div scroll id="header_nav" ng-class="navClass">
-    <div class="notifications"><img src="/public/assets/m/img/ic/ibox-f.png"></div>
+<!-- <div scroll id="header_nav" ng-class="navClass">
+</div> -->
 
+
+ <ng-switch on="data">
+<div ng-switch-when="true" id="header_nav">
+<div scroll id="prof-info">
+ <div class="row">
+ <div class="col-xs-1 col-md-1 col-sm-1"> </div>
+        <div class="col-xs-2 col-md-2 col-sm-2"> <div class="profile-pic"><img src="{{user.avatar}}"></div></div>
+      <div class="col-xs-2 col-md-2 col-sm-2">  <div class="profile-name">{{user.name.first}}</div></div>
+      <!-- <div class="col-xs-2 col-md-2 col-sm-2">  <div class="profile-desc">{{user.jobTitle}} {{user.organization}}</div></div> -->
+      <div class="col-xs-2 col-md-2 col-sm-2"><div class="notifications"><img src="/public/assets/m/img/ic/ibox-f.png"></div></div>
+        </div>
+</div>
 </div>
 
-<div id="profile-details">
+<div id="profile-details" ng-switch-when="false">
         <div class="notifications"><img src="/public/assets/m/img/ic/ibox-f.png"></div>
         <div class="profile-pic"><img src="{{user.avatar}}"></div>
         <div class="profile-name">{{user.name.first}} {{user.name.last}}</div>
@@ -60,9 +72,11 @@
         </div>
         </div>
 
-
+<!-- </div> -->
+ </ng-switch>
 
     <div class="container" id="menu">
+
         <div class="container" id="menu">
         <div class="row">
             <div class="col-xs-6 col-sm-4 col-md-4">
@@ -103,4 +117,5 @@
             </div>
         </div>
     </div>
+    <div scroll ng-model="data"></div>
     </div>
